nome do site alterado

--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./Estilo/style.css">
-    <title>GameSSocial</title>
+    <title>GameSky</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <h1>GameS<span>Social</span></h1>
+                <h1>Game<span>Sky</span></h1>
             </div>
             <ul class="nav-menu-esq">
                 <li><a href="#top" class="nav-menu-esq-item">Início</a></li>
