responsivo quase pronto

--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./Estilo/style.css">
-    <title>GameSky</title>
+    <title>GamesSky</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <h1>Game<span>Sky</span></h1>
+                <h1>Games<span>Sky</span></h1>
             </div>
             <ul class="nav-menu-esq">
                 <li><a href="#top" class="nav-menu-esq-item">Início</a></li>
@@ -151,6 +151,9 @@
         <div class="container" id="ofer">
             <h1 class="titulo-container">OFERTAS IMPERDÍVEIS</h1>
 
+            <div id="contador">
+
+            </div>
             <div class="promocoes">
                 <div class="jogo-promocoes">
                     <img src="./Imagens/capa-Skyrim.jpg" alt="Capa Skyrim">
@@ -247,6 +250,15 @@
                 </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            <h3>ACESSIBILIDADE</h3>
+            <h3>TERMOS E CONDIÇÕES</h3>
+            <h3>PRIVACIDADE</h3>
+            <h3>LEGAL</h3>
+        </div>
+    </footer>
 
 
 
