--- a/login.html
+++ b/login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./Estilo/login.css">
-    <title>Document</title>
+    <title>Login | GamesSky</title>
 </head>
 <body>
     
-        <a href="./Index.html"><button class="voltar"><</button></a>
+    <a href="./index.html"><button class="voltar"><</button></a>
     
 
     <main class="login">
@@ -28,9 +28,9 @@
                 </div>
                 <div class="inputs">
                     <p>Senha:</p>
-                    <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
+                    <input class="input" type="password" name="senha" id="senha" placeholder="Clique no botao Login para ir a tela de perfil">
                 </div>
-                <input type="submit" value="LOGIN" class="botaoLogin">
+                <a href="./perfil.html"><input type="submit" value="LOGIN" class="botaoLogin"></a>
             </div>
 
         </div>
