--- a/login.html
+++ b/login.html
@@ -28,9 +28,9 @@
                 </div>
                 <div class="inputs">
                     <p>Senha:</p>
-                    <input class="input" type="password" name="senha" id="senha" placeholder="Clique no botao Login para ir a tela de perfil">
+                    <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
                 </div>
-                <a href="./perfil.html"><input type="submit" value="LOGIN" class="botaoLogin"></a>
+                <input type="submit" value="LOGIN" class="botaoLogin">
             </div>
 
         </div>
