--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <a href="./index.html"><button class="voltar"><</button></a>
+    <a href="./Index.html"><button class="voltar"><</button></a>
     
 
     <main class="login">
