--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <p>Senha:</p>
                     <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
                 </div>
-                <input type="submit" value="LOGIN" class="botaoLogin">
+                <a href="./perfil.html"><input type="submit" value="LOGIN" class="botaoLogin"></a>
             </div>
 
         </div>
