--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="inputs">
                     <p>Senha:</p>
-                    <input class="input" type="password" name="senha" id="senha" placeholder="Senha">
+                    <input class="input" type="password" name="senha" id="senha" placeholder="Clique em LOGIN para ir a tela de perfil">
                 </div>
                 <a href="./perfil.html"><input type="submit" value="LOGIN" class="botaoLogin"></a>
             </div>
